--- a/sr-citizen-birthday-cash-incentive.html
+++ b/sr-citizen-birthday-cash-incentive.html
@@ -110,7 +110,7 @@
         <p>4. Kung walang kakayahang bumoto dahil sa lagay ng kalusugan, pagpapatunay/sertipikasiyon galing sa barangay na may lagda ng kapitan ang kailangan</p>
         <p>5. CERTIFICATION OF RESIDENCY WITH GOOD MORAL CHARACTER FROM BRGY. CAPTAIN</p>
     </div>
-
+    <input class="mt-4 btn btn-lr btn-primary w-100" type="submit" value="Register" id="senior-citizen-bday-cash-incentive" name="senior-citizen-bday-cash-incentive">
 </div>
 
 <?php 
