--- a/sr-citizen-birthday-cash-gift.html
+++ b/sr-citizen-birthday-cash-gift.html
@@ -102,7 +102,7 @@
         <p>2. VOTER'S CERTIFICATION/ID</p>
         <p>3. CERTIFICATION OF RESIDENCY WITH GOOD MORAL CHARACTER WITH SIGNATURE OF BRGY CAPTAIN</p>
     </div>
-
+    <input class="mt-4 btn btn-lr btn-primary w-100" type="submit" value="Register" id="senior-citizen-bday-cash-gift" name="senior-citizen-bday-cash-gift">
 </div>
 
 <?php 
