--- a/registration.html
+++ b/registration.html
@@ -127,7 +127,7 @@
         <div class="col-sm-2 border1">
             <div class="profile-pic-div">
                 <img src="images/image.jpg" id="photo">
-                <input type="file" id="file" accept="image/*" required>
+                <input type="file" id="file" accept="image/*">
                 <label class="required" for="file" id="uploadBtn">Choose Photo</label>
             </div>
         </div>
