--- a/sign-up.html
+++ b/sign-up.html
@@ -8,7 +8,7 @@
     <form id="signup-form" action="includes/sign-up.inc.php" method="post">
       <div class="display-5 mt-4 mb-4 text-white">Sign up</div>
       <input class="form-control mt-2" type="text" id="SLastName" name="SLastName" placeholder="Last Name" required autofocus/>
-      <input class="form-control mt-2" type="text" id="SSuffix" name="SSuffix" placeholder="Suffix" required autofocus/>
+      <input class="form-control mt-2" type="text" id="SSuffix" name="SSuffix" placeholder="Suffix"/>
       <input class="form-control mt-2" type="text" id="SFirstName" name="SFirstName" placeholder="First Name" required />
       <input class="form-control mt-2" type="text" id="SMiddleName" name="SMiddleName" placeholder="Middle Name"/>
       <input class="form-control mt-2" type="text" id="SEmail" name="SEmail" placeholder="Email Account" required />
