--- a/registration.html
+++ b/registration.html
@@ -1155,7 +1155,7 @@
         </div>
         <div class="row align-items-start">
             <div class="col form-group">
-                <label class="" for="name">Name</label>
+                <label class="required" for="name">Name</label>
                 <input class="form-control" type="text" id="name2" name="name" required>
             </div>
             <div class="col-2 form-group">
