--- a/test.html
+++ b/test.html
@@ -5,90 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
 </head>
 <body>
-    <form action="includes/test.inc.php" method="POST">
-        <div class="row">
-        <div class="col border1">
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col">
+                <h5 class="" >I.Family Composition</h5>
+            </div>
             <div class="row">
-                <div class="col">
-                    <h5>TYPE OF DISABILITY</h5>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Deaf/Hard of Hearing" id="deaf" name="typeOfDisability[]">
-                        <label class="form-check-label" for="deaf">
-                            Deaf/Hard of Hearing
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Intellectual Disability" id="intellectualDisability" name="typeOfDisability[]">
-                        <label class="form-check-label" for="intellectualDisability">
-                            Intellectual Disability
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Learning Disability" id="learningDisability" name="typeOfDisability[]">
-                        <label class="form-check-label" for="learningDisability">
-                            Learning Disability
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Mental Disability" id="mentalDisability" name="typeOfDisability[]">
-                        <label class="form-check-label" for="mentalDisability">
-                            Mental Disability
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Physical Disablity (Orthopedic)" id="physicalDisablity" name="typeOfDisability[]">
-                        <label class="form-check-label" for="physicalDisablity">
-                            Physical Disablity (Orthopedic)
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Psychosocial Disability" id="psychosocialDisability" name="typeOfDisability[]">
-                        <label class="form-check-label" for="psychosocialDisability">
-                            Psychosocial Disability
-                        </label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Speech and Language Impairment" id="speechAndLanguageImpairment" name="typeOfDisability[]">
-                        <label class="form-check-label" for="speechAndLanguageImpairment">
-                            Speech and Language Impairment
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Visual Disability" id="visualDisability" name="typeOfDisability[]">
-                        <label class="form-check-label" for="visualDisability">
-                            Visual Disability
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Cancer (RA11215)" id="cancer" name="typeOfDisability[]">
-                        <label class="form-check-label" for="cancer">
-                            Cancer (RA11215)
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Rare Disease (RA10747)" id="rareDisease" name="typeOfDisability[]">
-                        <label class="form-check-label" for="rareDisease">
-                            Rare Disease (RA10747)
-                        </label>
-                    </div>
+                <label class="form-check-label col" for="">
+                    <b>Name</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Relationship</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Age</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Civil Status</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Educational Attainment</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Occupation</b>
+                </label>
+                <label class="form-check-label col" for="">
+                    <b>Monthly Income</b>
+                </label>                    
+            </div>
+            <div id="family-list">
+                <div class="row family-data" id="duplicater">
+                    <input type="text" class="form-control col" name="family-composition-name[]" id="">
+                    <input type="text" class="form-control col" name="family-composition-relationship[]" id="">
+                    <input type="text" class="form-control col" name="family-composition-age[]" id="">
+                    <select class="col form-select" id="id-type" name="family-composition-civil-status[]" id="">
+                        <option disabled selected value="">Please Select</option>
+                        <option value="Single">Single</option>
+                        <option value="Annulled">Annulled</option>
+                        <option value="Widow">Widow/Widower</option>
+                        <option value="Married">Married</option>
+                        <option value="Separated">Separated</option>
+                    </select>
+                    <input type="text" class="form-control col" name="family-composition-educ-attainment[]" id="">
+                    <input type="text" class="form-control col" name="family-composition-occupation[]" id="">
+                    <input type="text" class="form-control col" name="family-composition-monthly-income[]" id="">
                 </div>
             </div>
+            <button class="btn add-family btn-primary m-1" type="button" id="add-family"  onlick="duplicate()">Add</button>
+            <div class="text-center ins">
+                <h6>(Include all family members and other members of the household.)</h6>
+            </div>
         </div>
-        <input class="mt-4 btn btn-lr btn-primary w-100" type="submit" value="Register" id="register" name="register">
-    </form>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+        document.getElementById('add-family').onclick = duplicate;
+        var original = document.getElementById('duplicater');
+
+        function duplicate() {
+            var clone = original.cloneNode(true); // "deep" clone
+            original.parentNode.appendChild(clone);
+        }
+    </script>
+
+
 </body>
 </html>
